# itdb

./: .drone.yml  README.md  elq  requirements.txt  setup.cfg  setup.py  tb_asset_info_model.py  tb_asset_info_test.py  test-requirements.txt  tox.ini
etc/beta/: itdb.conf
etc/development/: itdb.conf
etc/production/: itdb.conf  supervisor-itdb.conf
etc/table_sql/: create_table.sql  drop_table.sql
itdblib/: app.py  cmd.py
itdblib/common/: __init__.py  ajax.py  asset_info_utils.py  asset_tool_utils.py  corehr_api_utils.py  hr_intf.py  parse_excel.py  time_utils.py  type_info_utils.py  xls_utils.py
itdblib/common/datatools/: in_data_tools.py  out_data.py  tb_asset_info.py
itdblib/dal/: asset_consume_info_dal.py  asset_info_dal.py  asset_phone_info_dal.py  asset_type_dal.py  basedal.py  device_state_dal.py  in_out_reason_dal.py  model_dal.py  operation_info_dal.py  provider_dal.py  store_place_dal.py  store_state_dal.py
itdblib/db/: api.py
itdblib/models/: base.py  dt_asset_type.py  dt_device_state.py  dt_in_out_reason.py  dt_store_place.py  dt_store_state.py  mp_model.py  mp_provider.py  sqltypes.py  tb_asset_consume_info.py  tb_asset_info.py  tb_asset_phone_info.py  tb_operation_info.py
itdblib/services/: asset_consume_service.py  asset_info_ch_name_to_id.py  asset_info_id_to_ch_name.py  asset_info_service.py  asset_manager_service.py  asset_operate_service.py  asset_phone_service.py  attribute_manager_service.py  construct_dict_service.py  stock_in_service.py  stock_out_service.py
tests/etc/: unittest.ini  unittest_sqlite.ini
tests/utils/: app.py
(+61 files in other folders)
