[metadata]
name = itdb
author = wangzq
author-email = wangzhenqing1008@163.com
summary = IT management platform
license = Qunar
classifier =
    Development Status :: 1 - Planning
        Environment :: Web Environment
        Framework :: Flask
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    itdblib
data_files =

[entry_points]
console_scripts =
    itdb-www = itdblib.cmd:itdb_www
